test(service): enhance PaymentCustomerServiceTest with additional payment process validations and refactor test cases